Fix folder alignment

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
   body {
     @apply h-full w-full;
-    @apply bg-white text-gray-900;
+    @apply bg-white text-gray-600;
   }
 
   h1 {
